--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
-/* purgecss start ignore */
 @tailwind base;
-/* purgecss end ignore */
-
 @tailwind components;
-
 @tailwind utilities;
+
+@layer utilities {
+  .elevation {
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+}
