--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,71 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .styled-go-back path {
+    @apply fill-current transition transform duration-500 ease-in-out text-green-700 group-hover:text-white;
+  }
+
+  .styled-icon-wrapper path {
+    @apply fill-current transition transform duration-300 ease-in-out text-gray-900 group-hover:text-green-700;
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+
+  .popper-container {
+    @apply z-50 opacity-0;
+    animation: fadeIn 0.3s ease-in 0.5s forwards;
+  }
+
+  .arrow {
+    @apply absolute w-12 h-12;
+    &[data-placement*='bottom'] {
+      @apply top-0 left-0;
+      margin-top: -0.9em;
+      &::before {
+        border-width: 0 1.5em 1em 1.5em;
+        border-color: transparent transparent theme(colors.gray.700) transparent;
+      }
+    }
+    &[data-placement*='top'] {
+      @apply bottom-0 left-0;
+      margin-bottom: -2.9em;
+      &::before {
+        border-width: 1em 1.5em 0 1.5em;
+        border-color: theme(colors.gray.700) transparent transparent transparent;
+      }
+    }
+    &[data-placement*='right'] {
+      @apply left-0;
+      margin-left: -1.9em;
+      &::before {
+        border-width: 1.5em 1em 1.5em 0;
+        border-color: transparent theme(colors.gray.700) transparent transparent;
+      }
+    }
+    &[data-placement*='left'] {
+      @apply right-0;
+      margin-right: -1.9em;
+      &::before {
+        border-width: 1.5em 0 1.5em 1em;
+        border-color: transparent transparent transparent theme(colors.gray.700);
+      }
+    }
+    &::before {
+      content: '';
+      margin: auto;
+      display: block;
+      width: 0;
+      height: 0;
+      border-style: solid;
+    
+    }
+  }
+}
+
 @layer utilities {
   .elevation {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
